Linha toda e na distância certa

--- a/Module 2 - HTML e Git/Atividade 3/06/galeria.html
+++ b/Module 2 - HTML e Git/Atividade 3/06/galeria.html
@@ -7,40 +7,41 @@
   <link rel="stylesheet" href="galeria.css" />
 </head>
 <body>
+  <h1 style="text-align: center; margin: 20px 0;">Cidades do Mundo que já visitei</h1>
 
   <div class="flex-container">
     <div class="grid-galeria">
       <div class="item">
-        <img src="https://via.placeholder.com/200" alt="Imagem 1">
-        <p>Legenda 1</p>
+        <img src="images/bilbao-velha-do-centro.jpg" alt="Bilbao, España">
+        <p>Bilbao, España</p>
       </div>
       <div class="item">
-        <img src="https://via.placeholder.com/200" alt="Imagem 2">
-        <p>Legenda 2</p>
+        <img src="images/bayonne-france.jpg" alt="Bayonne, France">
+        <p>Bayonne, France</p>
       </div>
       <div class="item">
-        <img src="https://via.placeholder.com/200" alt="Imagem 3">
-        <p>Legenda 3</p>
+        <img src="images/pau-france.jpg" alt="Pau, France">
+        <p>Pau, France</p>
       </div>
       <div class="item">
-        <img src="https://via.placeholder.com/200" alt="Imagem 4">
-        <p>Legenda 4</p>
+        <img src="images/porto.jpg" alt="Porto, Portugal">
+        <p>Porto, Portugal</p>
       </div>
       <div class="item">
-        <img src="https://via.placeholder.com/200" alt="Imagem 5">
-        <p>Legenda 5</p>
+        <img src="images/portoalegre.jpg" alt="Porto Alegre, RS, Brésil">
+        <p>Porto Alegre, RS, Brésil</p>
       </div>
       <div class="item">
-        <img src="https://via.placeholder.com/200" alt="Imagem 6">
-        <p>Legenda 6</p>
+        <img src="images/riodejaneiro.jpg" alt="Rio de Janeiro, RJ, Brésil">
+        <p>Rio de Janeiro, RJ, Brésil</p>
       </div>
       <div class="item">
-        <img src="https://via.placeholder.com/200" alt="Imagem 7">
-        <p>Legenda 7</p>
+        <img src="images/salvador.jpg" alt="Salvador, BA, Brésil">
+        <p>Salvador, BA, Brésil</p>
       </div>
       <div class="item">
-        <img src="https://via.placeholder.com/200" alt="Imagem 8">
-        <p>Legenda 8</p>
+        <img src="images/saopaulo.jpg" alt="São Paulo, SP, Brésil">
+        <p>São Paulo, SP, Brésil</p>
       </div>
     </div>
   </div>
