--- a/Module 2 - HTML e Git/Atividade 3/07/menu.html
+++ b/Module 2 - HTML e Git/Atividade 3/07/menu.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">Minha Logo</div>
+      <div class="logo">Arte & Foto</div>
       <ul class="nav-links">
         <li><a href="#">Início</a></li>
         <li><a href="#">Sobre</a></li>
